kubernetes/monitoring/homeprod/metrics-server/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: metrics-server
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: monitoring-metrics-server
      app.kubernetes.io/name: metrics-server
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 10250
          protocol: TCP
  egress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: metrics-server
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: monitoring-metrics-server
      app.kubernetes.io/name: metrics-server
  egress:
    - toEntities:
      - host
      - kube-apiserver
      - remote-node
  ingress:
    - fromEntities:
      - host
      - remote-node
